# python-sdk

./: .autoblocks.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  human-review-spec.md  pyproject.toml  renovate.json
.github/: renovate.json
.github/actions/get-recent-pypi-versions/: action.yml
.github/workflows/: ci-vendor.yml  ci.yml  release.yml
autoblocks/: error.py  replays.py  tracer.py
autoblocks/_impl/: context_vars.py  error.py  global_state.py  replays.py  tracer.py  util.py
autoblocks/_impl/api/: app_client.py  base_app_resource_client.py  client.py  exceptions.py  models.py
autoblocks/_impl/api/datasets/: client.py
autoblocks/_impl/api/utils/: helpers.py  serialization.py
autoblocks/_impl/api/v2/: client.py  models.py
autoblocks/_impl/app/: client.py  models.py
autoblocks/_impl/cli/: main.py
autoblocks/_impl/config/: constants.py  env.py
autoblocks/_impl/configs/: config.py  models.py
autoblocks/_impl/datasets/: client.py  exceptions.py  util.py
autoblocks/_impl/datasets/models/: conversation.py  dataset.py  schema.py
autoblocks/_impl/datasets/utils/: helpers.py  serialization.py
autoblocks/_impl/datasets_v2/: client.py  exceptions.py  schema.py  types.py  validation.py
autoblocks/_impl/datasets_v2/models/: __init__.py  conversation.py  dataset.py  schema.py
autoblocks/_impl/datasets_v2/utils/: __init__.py  helpers.py  serialization.py
autoblocks/_impl/human_review/: client.py  models.py
autoblocks/_impl/human_review/models/: __init__.py  models.py
autoblocks/_impl/langchain/: callback.py
autoblocks/_impl/prompts/: autogenerate.py  constants.py  context.py  error.py  manager.py  models.py  placeholders.py  renderer.py  utils.py
autoblocks/_impl/prompts/cli/: error.py  main.py  models.py
autoblocks/_impl/prompts/v2/: __init__.py  client.py  (+8 more)
autoblocks/_impl/pytest/: plugin.py
autoblocks/_impl/scenarios/: __init__.py  client.py  models.py  util.py
autoblocks/_impl/testing/: api.py  models.py  run.py  run_manager.py  start_run.py  test-run.py  test_run.py  util.py
autoblocks/_impl/tracer/: auto_tracer.py  decorators.py  span_processor.py  util.py
autoblocks/api/: __init__.py  app_client.py  client.py  exceptions.py  models.py  utils.py
autoblocks/api/v2/: __init__.py
autoblocks/configs/: config.py  models.py
autoblocks/datasets/: client.py  exceptions.py  models.py  utils.py
autoblocks/datasets_v2/: __init__.py  client.py  exceptions.py  models.py  schema.py  types.py  utils.py
autoblocks/human_review/: __init__.py  models.py
autoblocks/prompts/: context.py  manager.py  models.py  renderer.py
autoblocks/prompts/v2/: __init__.py  context.py  manager.py  models.py  renderer.py
autoblocks/scenarios/: models.py  utils.py
autoblocks/testing/: evaluators.py  models.py  run.py  test_run.py  util.py
autoblocks/testing/v2/: run.py
autoblocks/tracer/: __init__.py  models.py
e2e/: prompts.py  run.py
examples/: datasets_v2_example.py
tests/: conftest.py  test_api_client.py  test_hello.py  test_replays.py  test_tracer.py  test_util.py  util.py
tests/autoblocks/: test_api_client.py  test_app_client_datasets.py  test_autoblocks_config.py  test_autoblocks_configs.py  test_cuid2_validation_performance.py  test_evaluators.py  test_human_review.py  test_prompt_manager.py  test_prompts_autogenerate.py  test_prompts_v2_manager.py  test_ragas_evaluators.py  test_run_manager.py  test_run_manager_v2.py  test_run_test_suite.py  test_run_test_suite_v2_retry.py  test_run_test_suite_v2_validation.py  test_run_test_suite_without_cli.py  test_scenarios.py  test_test_run.py  test_tracer.py  test_util.py  util.py
tests/autoblocks/__snapshots__/: test_prompts_autogenerate.ambr
tests/autoblocks/discovery/: test_app_generation.py  test_code_generator.py  test_discovery.py  test_file_utils.py  test_managers.py  test_prompts.py  test_renderers.py
tests/autoblocks/v2/: __init__.py  conftest.py  test_api_client.py  test_autogenerate.py  test_cli.py  test_cli_multi_app.py  test_manager.py  test_multi_app_config.py  test_multi_app_tracing.py  test_refresh.py  test_validation.py  test_weighted_versions.py
tests/datasets_v2/: test_client.py  test_validation.py
tests/e2e/: async_script.py  flask_app.py  plain_script.py  prompts.py  slow_evaluators.py  test_app_client.py  test_datasets.py  test_datasets_v2.py  test_e2e.py  test_prompts_v2.py  tracer_shutdown_test_process.py
tests/e2e/autoblocks_prompts/: __init__.py
tests/e2e/datasets/: setup.py
tests/e2e/datasets_v2/: setup.py
tests/e2e/prompts_v2/: __init__.py
tests/e2e/tracer_shutdown/: main.py  test_tracer_shutdown.py  tracer_shutdown_test.py  tracer_shutdown_test_process.py
(+52 files in other folders)
