[tool.poetry]
name = "autoblocksai"
# The version is not maintained here. It's set in the release workflow via the version input.
version = "0.0.0"
description = "Python client for Autoblocks"
license = "MIT"
authors = ["Autoblocks Engineering <engineering@autoblocks.ai>"]
readme = "README.md"
homepage = "https://github.com/autoblocksai/python-sdk"
repository = "https://github.com/autoblocksai/python-sdk"
documentation = "https://docs.autoblocks.ai"
packages = [{include = "autoblocks"}]

[tool.poetry.dependencies]
python = "^3.9.0"

# NOTE: These dependencies should be as relaxed as possible.
# See CONTRIBUTING.md for more information.
httpx = ">=0.24.0"
click = ">=8.0.0"
pyyaml = ">=6.0.0"
orjson = ">=3.0.0"
attrs = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-httpx = "0.22.0"
freezegun = "^1.2.2"
pydantic = "^2.5.3"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
types-orjson = "^3.6.2"
types-click = "^7.1.8"

[tool.poetry.scripts]
prompts = "autoblocks._impl.prompts.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
lint.select = ["E", "F", "I001"]
line-length = 120

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["autoblocks"]
